fix overflow issue

--- a/styles/_home_screen.scss
+++ b/styles/_home_screen.scss
@@ -8,7 +8,7 @@
   "left-space pitch right-space";
   grid-gap: 10px;
 
-  grid-template-rows: minmax(160px, 30%) minmax(30px, 10%) 50% minmax(40px, 5%);
+  grid-template-rows: minmax(160px, 30%) minmax(30px, 10%) 50% 50px;
   grid-template-columns: 15% 70% 15%;
   width: 100%;
   overflow-y: scroll;
@@ -25,13 +25,13 @@
 
 @media only screen and (min-width: 2800px) {
   .home-container {
-    grid-template-rows: minmax(350px, 30%) minmax(100px, 10%) 55%;
+    grid-template-rows: minmax(350px, 30%) minmax(100px, 10%) 55% 100px;
   }
 }
 
 @media only screen and (max-width: 2800px) and (min-width: 1920px) {
   .home-container {
-    grid-template-rows: minmax(250px, 30%) minmax(100px, 10%) 55%;
+    grid-template-rows: minmax(250px, 30%) minmax(100px, 10%) 55% 100px;
   }
 }
 
